tests/NormalTests/paczka2/big_fuzzy/55063154.err
Error in line 3: ivbrEz5 S39 17,9
Error in line 5: ivbrEz5 S657 85,1
Error in line 8: ivbrEz5 A35 3,5
Error in line 6: ydDDbFENuT S24 88,1
Error in line 7: QMbFF2 S24 0,8
Error in line 13: QMbFF2 A35 51,6
Error in line 17: ivbrEz5 S24 23,1
Error in line 19: ivbrEz5 A35 36,2
Error in line 26: 5ef06 A35 -1,5
Error in line 27: ivbrEz5 A35 35,9
Error in line 24: RtmNhQSVv6t S39 7,6
Error in line 28: ivbrEz5 S24 9,5
Error in line 36: ivbrEz5 A35 43,6
Error in line 21: S657 S39 55,0
Error in line 54: QMbFF2 A35 16,0
Error in line 58: QMbFF2 S657 85,2
Error in line 63: 5ef06 A35 7,8
Error in line 59: QMbFF2 A35 79,9
Error in line 65: 5ef06 S657 8,2
Error in line 76: ydDDbFENuT S24 89,1
Error in line 80: QMbFF2 S657 242,7
Error in line 77: ydDDbFENuT S657 3,0
Error in line 85: 5ef06 S24 88,0
Error in line 97: ivbìEz5 S24 155,0
Error in line 96: ivbrEz5 S24 78,7
Error in line 102: ivbrEz5 S657 57,1
Error in line 134: QMbFF2 S24 90,8
Error in line 121: 5ef06 S657 54,8
Error in line 131: ivbrEz5 S657 66,2
Error in line 136: 5ef06 S24 59,9
Error in line 110: ydDDbFENuT S24 23,8
Error in line 147: WsQNwZj9sYl S39 44,0
Error in line 166: RtmNhQSVv6t S24 58,3
Error in line 178: S657 S39 82,7
Error in line 187: S657 S24 -2,9
Error in line 186: S657 S24 262,4
Error in line 203: RtmNhQSVv6t S657 38,1
Error in line 207: QMbFF2 A35 21,8
Error in line 222: ydDDbFENuT S657 78,8
Error in line 241: ivbrEz5 A35 97,5
